--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "langchain-core>=0.3.76",
     "langchain-google-community>=2.0.10",
     "langchain-openai>=0.3.33",
+    "langchain-tavily>=0.2.11",
     "langgraph>=0.6.7",
+    "logging>=0.4.9.6",
     "rich>=14.1.0",
     "scikit-learn>=1.7.2",
 ]
